--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_strategy: ^0.2.0
   english_words: ^4.0.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
